fixed navbar on mobile version, fixed years pagination on magazines mobile page

--- a/styles/all_scss/navbar.scss
+++ b/styles/all_scss/navbar.scss
@@ -413,7 +413,7 @@
     display: none !important;
   }
   .navbar-text {
-    margin-bottom: $margin-big;
+    margin-bottom: 1000px;
   }
   .navbar-nav {
     padding-top: 27px;
